--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@
   margin: 0;
   box-sizing: border-box;
   font-family: "Lato", sans-serif;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 body {
@@ -21,4 +21,3 @@ body {
   flex-direction: column;
   flex-wrap: wrap;
 }
-
